@@ -1,3 +1,7 @@
+2000-11-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* libsmi-0.2.9.tar.gz: released version 0.2.9.
+
 2000-11-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* smi.conf-example: Added a configuration file example.
